# stmtools

./: .gitignore  .zenodo.json  404.html  CITATION.cff  README.md  contextual_data_query.drawio  density_subset.ipynb  depsi_a4_asc.m  index.html  mkdocs.yml  morton_order.ipynb  pyproject.toml  setup.cfg  sonar-project.properties  stm_example.ipynb  stm_subset_example.ipynb  stmat.py
.github/workflows/: build.yml  lint.yml  sonarcloud.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: CONTRIBUTING.md  index.html
docs/: CHANGELOG.md  CONTRIBUTING.md  api_reference.md  index.md  operations.md  order.md  setup.md  stm_init.md
docs/notebooks/: demo_order_stm.ipynb  demo_order_stm_tmp.ipynb  demo_stm.ipynb
docs/notebooks/data/: example2.csv
examples/: demo_add_metadata.ipynb  demo_stm.ipynb  demo_stm.py  demo_stm_spider.ipynb  enrich_depsi_csv_output.ipynb
examples/legacy/: polygon_demo.ipynb  stm_example.ipynb
experiments/: README.md  morton_order.ipynb
notebooks/demo_operations_stm/: demo_operations_stm.ipynb  index.html
notebooks/demo_order_stm/: demo_order_stm.ipynb  index.html
notebooks/demo_stm/: index.html
operations/: index.html  operations.md
order/: index.html
paper/: paper.bib  paper.md
search/: search_index.json
setup/: index.html
stm/: __init__.py  stm.py
stm_init/: index.html  stm_init.md
stmat/: __init__.py  stmat.py
stmtools/: __init__.py  _io.py  metadata.py  stm.py  utils.py
tests/: conftest.py  test_io.py  test_stm.py  test_util.py
tests/data/: example.csv  multi_polygon.gpkg
usage/: index.html
