[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stmtools"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dask[complete]",
    "xarray",
    "numpy",
    "rasterio",
    "geopandas",
    "affine",
    "zarr",
    "distributed",
]
description = "space-time matrix for PS-InSAR application"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ou Ku", email = "o.ku@esciencecenter.nl"},
    {name = "Fakhereh Alidoost"},
    {name = "Pranav Chandramouli"},
    {name = "Meiert Willem Grootes"},
    {name = "Francesco Nattino"},
    {name = "Thijs van Lankveld"},
    {name = "Freek van Leijen"},
]
keywords = ["stm", "sar", "insar", "space-time", "psi"]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
repository = "https://github.com/MotionbyLearning/stmtools"
doi = "https://doi.org/10.5281/zenodo.7717112"
documentation = "https://motionbylearning.github.io/stmtools/"
changelog = "https://motionbylearning.github.io/stmtools/CHANGELOG/"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pycodestyle",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
]
demo = [
    "jupyterlab",
    "matplotlib",
]

[tool.setuptools]
packages = ["stmtools"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report term"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["stmtools"]
