[metadata]
author = Netherlands eScience Center
name = stm
version = 0.1.0
description = space-time matrix for PS-InSAR application
keywords = stm, stm, psi
long_description = file: README.md
license = Apache
license_files = LICENSE
platform = any
classifiers =
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: InSAR
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/MotionbyLearning/stm

[options]
packages = find:
python_requires = >=3.10
install_requires =
    xarray
    numpy
    rasterio
    geopandas
    affine
    zarr
    dask
    distributed

[options.extras_require]
doc =
    sphinx-click
    nbsphinx
    sphinx_rtd_theme
test =
    pytest
    pytest-cov
    pytest-timeout
demo = 
    jupyterlab
    matplotlib

